<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_wrap"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layout_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@+id/btn_save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.8">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/default_margin_vertical"
                        android:text="@string/text_name"
                        app:layout_constraintBottom_toTopOf="@+id/tv_amount"
                        app:layout_constraintEnd_toStartOf="@+id/et_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/default_margin_vertical"
                        android:inputType="text"
                        android:text="@string/text_amount"
                        app:layout_constraintBottom_toTopOf="@+id/tv_memo"
                        app:layout_constraintEnd_toStartOf="@+id/et_amount"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

                    <TextView
                        android:id="@+id/tv_memo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/default_margin_vertical"
                        android:text="@string/text_memo"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/et_memo"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_amount" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@+id/tv_name"
                        app:layout_constraintTop_toTopOf="@+id/tv_name"
                        app:layout_constraintWidth_percent="0.5"
                        />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_amount"
                        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_amount"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@+id/tv_amount"
                        app:layout_constraintTop_toTopOf="@+id/tv_amount"
                        app:layout_constraintWidth_percent="0.5" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_memo"
                        style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        app:layout_constraintBottom_toBottomOf="@+id/tv_memo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0"
                        app:layout_constraintStart_toEndOf="@+id/tv_memo"
                        app:layout_constraintTop_toTopOf="@+id/tv_memo"
                        app:layout_constraintWidth_percent="0.5" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="저장"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_input"
                    app:layout_constraintWidth_percent="@dimen/full_btn_width_percent" />

                <FrameLayout
                    android:id="@+id/frame_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:elevation="1dp"
                    android:translationZ="1dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/layout_input"
                    app:layout_constraintVertical_bias="1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>